# pyTracing

./: .gitignore  CHANGELOG.md  README.md  main.py  main_numba.py  main_v2.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
pytracing/: __init__.py  render.py  renderer.py  scene.py
pytracing/geometry/: vector.py
pytracing/raytracer_jit/: render.py
pytracing/raytracer_jit/geometry/: vector.py
pytracing/raytracer_jit/shapes/: plane.py  shape.py  sphere.py
pytracing/raytracer_py/: render.py
pytracing/raytracer_py/geometry/: __init__.py  vector.py
pytracing/raytracer_py/shapes/: shape.py
pytracing/shapes/: shape.py
pytracing_numba/: render.py  scene.py
pytracing_numba/geometry/: __init__.py  typing.py  vector.py
pytracing_numba/shapes/: plane.py  shape.py  sphere.py
tests/: test_rays.py  test_vector.py
