[metadata]
name = pyTracing
version = version = attr: pytracing.__version__
author = Vincent Français
author_email = vincent.francais@gmail.com
description = Simple ray tracer using pure python (numpy) and numba jit
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numba
    numpy
    Pillow
    scipy
    tqdm


[options.extras_require]
dev =
    pytest
    commitizen

[options.package_data]
* = README.md